--- a/labs/lab03/report/report.qmd
+++ b/labs/lab03/report/report.qmd
@@ -30,35 +30,35 @@ subtitle: "дисциплина: Архитектура компьютера"
 Создам учетную запись на сайте и заполню основные данные 
 Сделаю предварительную конфигурацию git и настрою её (рис. 3.1).
 
-![Проверка создания и настройки конфигурации git](Изображения/1.jpg){#fig:001 width=70%}
+![Проверка создания и настройки конфигурации git](image/1.jpg){#fig:001 width=70%}
 
 Для последующей идентификации пользователя на сервере репозиториев необходимо сгенерировать пару ключей. Чтобы загрузить сгенерированный открытый ключ необходимо скопировать его из локальной консоли в буфер обмена и вставить в появившееся на сайте поле для ключа (рис. 3.2).
 
-![Создание SSH ключа](Изображения/2.png){#fig:002 width=70%}
+![Создание SSH ключа](image/2.png){#fig:002 width=70%}
 
 Зайду в свой аккаунт на сайте github и перейду в настройки. Добавлю скопированный ключ и указываю имя ключа – Title (рис. 3.3).
 
-![Добавление ключа в аккаунт](Изображения/3.jpg){#fig:003 width=70%}
+![Добавление ключа в аккаунт](image/3.jpg){#fig:003 width=70%}
 
 Проверю наличие ключа (рис. 3.4).
 
-![Проверка наличия ключа](Изображения/4.jpg){#fig:004 width=70%}
+![Проверка наличия ключа](image/4.jpg){#fig:004 width=70%}
 
 Открою терминал. Создам каталог для предмета «Архитектура компьютера» (рис. 3.5).
 
-![Создание каталога](Изображения/5.png){#fig:005 width=70%}
+![Создание каталога](image/5.png){#fig:005 width=70%}
 
 Перейду на страницу репозитория с шаблоном курса и создам репозиторий (рис. 3.6).
 
-![Создание репозитория](Изображения/6.jpg){#fig:006 width=70%}
+![Создание репозитория](image/6.jpg){#fig:006 width=70%}
 
-Перейду в каталог курса, создам необходимые каталоги и отслежу файл.Запишу изменения в репозиотрий (рис. 3.7).
+Перейду в каталог курса, создам необходимые каталоги и отслежу файл.Запишу изменения в репозитoрий (рис. 3.7).
 
-![Клонирование репозитория_представлен не весь процесс](Изображения/7.jpg){#fig:007 width=70%}
+![Клонирование репозитория_представлен не весь процесс](image/7.jpg){#fig:007 width=70%}
 
 Отправлю данные в репозиторий и проверю выполнение команд (рис. 3.8).
 
-![Проверка выполнения команд](Изображения/8.jpg){#fig:008 width=70%}
+![Проверка выполнения команд](image/8.jpg){#fig:008 width=70%}
 
 # Выводы
 Я изучила идеологии и применения средств контроля версий, приобрела практические навыки по работе с системой контроля версий git.
