--- a/labs/lab04/report/report.qmd
+++ b/labs/lab04/report/report.qmd
@@ -40,7 +40,7 @@ license: "CC BY"
 
 Создадим каталог для работы с программами на языке ассемблера NASM. Перейдем в созданный каталог. Создадим текстовый файл с именем hello.asm ([рис.4.1]). 
 
-![Создание файла](image/1.JPG){#fig-001 width=70%}
+![Создание файла](image/1.jpg){#fig-001 width=70%}
 
 И откроем его с помощью текстового редактора, введем туда программу ([рис.4.2]).
 
